--- a/_static/alabaster.css
+++ b/_static/alabaster.css
@@ -15,6 +15,10 @@
 
 @import url("basic.css");
 
+hr {
+    clear: both;
+}
+
 /* -- page layout ----------------------------------------------------------- */
 
 body {
